feat: add arrow-slider

--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
 </head>
 <body>
   <div class="slider">
-    <div class="slider__line">
-      <img src="./images/aedefe98737ee960a94a534050e2b1f9.jpg" alt=""> 
-      <img src="./images/no_image.jpg" alt=""> 
-      <img src="./images/unnamed.jpg" alt=""> 
+    <div class="slider__wrapper">
+      <div class="slider__line">
+        <img class="slider__img" src="./images/html.jpg" alt="html"> 
+        <img class="slider__img" src="./images/css.png" alt="css"> 
+        <img class="slider__img" src="./images/aedefe98737ee960a94a534050e2b1f9.jpg" alt="js"> 
+        <img class="slider__img" src="./images/html2.png" alt="html"> 
+        <img class="slider__img" src="./images/css2.png" alt="css"> 
+        <img class="slider__img" src="./images/no_image.jpg" alt="js"> 
+      </div>
     </div>
     <button class="slider__btn-prev">
       <img src="./images/red_arrow.png" alt="">
@@ -24,8 +29,11 @@
       <div class="slider__dot active-dot"></div>
       <div class="slider__dot"></div>
       <div class="slider__dot"></div>
+      <div class="slider__dot"></div>
+      <div class="slider__dot"></div>
+      <div class="slider__dot"></div>
     </div>
   </div>
-  
+  <script src="./script.js"></script>
 </body>
 </html>
